# datadog-log-parser

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  start-web-ui.sh  test_fix.py
src/: __init__.py  csv_log_extractor.py  datadog_log_parser.py  datadog_parser_v2.py  parse_datadog_logs.py
src/go/: README.md
src/nodejs/: README.md
src/rust/: README.md
src/web/: README.md  __init__.py  app.py  requirements.txt
src/web/static/: app.js  style.css
src/web/templates/: index.html
standalone/: README.md  log-parser.html
tests/: __init__.py  test_csv_extractor.py  test_datadog_parser.py  test_web_api.py
