[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datadog-log-parser"
version = "1.1.0"
description = "A comprehensive utility for parsing logs from Datadog, CSV exports, and more"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["log-parser", "datadog", "csv", "log-analysis", "parsing"]
authors = [
    {name = "Log Parser Utility Contributors"}
]
maintainers = [
    {name = "Log Parser Utility Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
web = [
    "Flask>=3.0.0",
    "Werkzeug>=3.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
production = [
    "gunicorn>=21.2.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/datadog-log-parser"
Documentation = "https://github.com/yourusername/datadog-log-parser/blob/main/README.md"
Repository = "https://github.com/yourusername/datadog-log-parser"
Issues = "https://github.com/yourusername/datadog-log-parser/issues"
Changelog = "https://github.com/yourusername/datadog-log-parser/blob/main/CHANGELOG.md"

[project.scripts]
parse-datadog-logs = "log_parser.cli:parse_datadog_main"
csv-log-extractor = "log_parser.cli:csv_extractor_main"
log-parser-web = "log_parser.web:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["log_parser"]

[tool.setuptools.package-data]
log_parser = ["web/static/*", "web/templates/*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=log_parser --cov-report=term-missing"
testpaths = [
    "tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
